<resources>
    <string name="app_name">Proyecto1</string>
    <string name="action_settings">Settings</string>
    <string name="botoneliminar">botoneliminar</string>
    <string name="Nombre">Nombre</string>
    <string name="Email">Email</string>
    <string name="Edad">Edad</string>
    <string name="Celular">Celular</string>
    <string name="Telefono">Telefono</string>
    <string name="Seleccionar_Grupo">Seleccionar Grupo</string>
    <string name="Nombre1">Nombre</string>
    <string name="Email1">Email</string>
    <string name="Edad1">Edad</string>
    <string name="Celular1">Celular</string>
    <string name="Telefono1">Telefono</string>

    <string-array name="Grupo">

        <item>Seleccione Departamento</item>
        <item>Antioquia</item>

        <item>Cundinamarca</item>

        <item>Santander</item>

    </string-array>
</resources>
