<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marcela.proyecto1.SecondActivity">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="2500dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/register" />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/imagen"
       android:orientation="vertical">

    <EditText
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:background="#a368ab"
        android:hint="@string/Nombre1"
        />
       <EditText
           android:id="@+id/email"
           android:layout_width="400dp"
           android:layout_height="40dp"
           android:background="#e3b1ea"
           android:hint="@string/Email1"
           />
       <EditText
           android:layout_width="400dp"
           android:layout_height="40dp"
           android:background="#a368ab"
           android:hint="@string/Edad1"
           />
       <EditText
           android:layout_width="400dp"
           android:layout_height="40dp"
           android:background="#e3b1ea"
           android:hint="@string/Celular1"
           />

       <EditText
           android:layout_width="400dp"
           android:layout_height="40dp"
           android:background="#a368ab"
           android:hint="@string/Telefono1"
           />
       <Spinner
           android:id="@+id/grupo_spinner"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="15dp"
           android:layout_toRightOf="@+id/txtGrupo"
           android:entries="@array/Grupo"
           android:prompt="@string/Seleccionar_Grupo" />

   </LinearLayout>
       <Button
           android:id="@+id/btn_guardar"
           android:layout_width="200dp"
           android:layout_height="50dp"
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           android:text="Guardar"/>

</RelativeLayout>
